tests/should_fail/try_non_result.fit
fn get_value() -> String

fn test() -> String {
    get_value()?
}
